6.0.2 (not yet released):
- Update the image creation parameters so we can overwrite the list of binary
packages to install in a image for a given Linux distribution.
- Move Selector code to the Selector package source tree.
- Add "OSCAR::ClientMgt::cleanup_clients()" function that cleans the system up
regarding clients definition. The function is currently used only before the
definition of clients, to be sure we won't face any problems during the actual
clients creation.
- Add an "experimental" package set.
- [Ticket #483] Remove code duplication between MAC.pm and MACops.pm.
- [Ticket #519] Re-introduce the startover capability (via oscar-config
--startover command).
- Add the mysql support to OS_Settings and OSCAR::SystemServices.
- Fix a problem when detecting the NIC used by OSCAR in the network-check
script.
- Improve unit tests.
- Fix a bug in OS_Settings when falling back to the default settings.
- Update Configurator to 1.0.1.
- Update Yume to 2.8.5.
- Update Opium to 1.3.
- Update ODA to 1.4.
- Update ORM to 1.2.1.
- Update SystemInstaller to 2.3.10.
- Update PackMan to 3.1.6.
- Update Selector to 1.1.1.
- Improve the unit tests.
- Code clean-up.
- Prereqs: decrease the output by default.
- Prereqs: update the prereq API to make it more coherent
- Update OS_Settings.
- Wizard GUI: make the "delete client" visible all the time.
- Port the management of the /etc/init.d/systemimager-server-monitord service
to OSCAR::SystemServices.
- Etend the Utils Perl module.
- Improve Perldoc documentation.
- Improve scripts output.
- Modify the Makefile so we can choose the directory where the binary packages
are stored.
- Enable the creation of unsigned Debian packages by setting the
UNSIGNED_OSCAR_PKG environment variable.

6.0.1:
- Add RPMs for OSCAR core on Fedora Core 9 (both i386 and x86_64).
- Update the RPM list for rhel-5-x86_64 and compatible distributions.
- Merge oscar-base.spec.in and oscar.spec.in.