@@ -1,4 +1,5 @@
 6.0.2 (not yet released):
+- Fix a bug when OSCAR updates the /etc/hosts file.
 - Update the image creation parameters so we can overwrite the list of binary
 packages to install in a image for a given Linux distribution.
 - Move Selector code to the Selector package source tree.
